--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <!-- <footer>
+    <a href="./privacy_policy.html" target="_blank">Private policy</a>
+    <a href="#">How to delete your data?</a>
+  </footer> -->
+
 </body>
 
 </html>
